# Crime-Intelligence-System

backend/: CMakeLists.txt  Dockerfile  build.sh  package.json  railway.json
backend/src/: main.cpp
backend/src/API/: Server.cpp  Server.h
backend/src/BTree/: BTree.cpp  BTree.h
backend/src/Database/: DBManager.cpp  DBManager.h
backend/src/HashTable/: HashTable.cpp  HashTable.h
backend/src/Queue/: Queue.cpp  Queue.h
backend/src/Stack/: Stack.cpp  Stack.h
database/: schema.sql  setup.sh
frontend/: .env.production  package-lock.json  package.json  tailwind.config.js
frontend/source/: index.css
frontend/source/components/Dashboard/: StatsCard.js
frontend/source/components/Layout/: Navbar.js  Sidebar.js
frontend/source/components/Search/: CriminalSearch.js
frontend/source/pages/: Dashboard.js
frontend/source/services/: api.js
frontend/src/: App.js
frontend/src/components/Dashboard/: CriminalTable.js
